# osa

./: .gitignore  README.md  main.py  menu.py  platformer.py  pygame_collision_fix.txt  pyproject.toml  quick_test.py  setup.py  test_main.py  test_platformer.py  validate.py
.github/workflows/: crewai-action.yml
ai/: kickoff.py
ai/crew/: dev_crew.py
ai/crew/config/: agents.yaml  tasks.yaml
ai/tools/: github_commit_code_tool.py  github_create_branch_tool.py  github_create_pull_request_tool.py  github_issue_create_tool.py  github_issue_fetch_tool.py  github_list_files_tool.py  notion_table_fetch_tool.py
src/: platform_creation.py  player_controller.py
